--- a/style.css
+++ b/style.css
@@ -1,17 +1,38 @@
-h2 {
-    font-size: 5em;
-    text-align: center;
-    color: rgb(253, 5, 5);
-    }
-p {
-    padding-top: 5em;
-    font-size: 2em;
-    text-align: center;
-    color: blue}    
-body {font-style: Arial;
+@import url('https://fonts.googleapis.com/css?family=Luckiest+Guy|Permanent+Marker&display=swap');
+
+body {
     background-image: url("img/angryman.jpg"); 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-   }
+}
+
+h2 {
+    font-family: 'Permanent Marker', cursive;
+    font-size: 5em;
+    text-align: center;
+    color: rgb(253, 5, 5);
+}
+
+p {
+    font-family: 'Luckiest Guy', cursive;
+    padding-top: 2em;
+    font-size: 2em;
+    text-align: center;
+    color: rgb(243, 8, 78);
+    
+} 
+
+a:link {
+    color: rgb(243, 8, 78);
+}
+
+a:visited {
+    color:purple;
+}
+
+a:hover {
+    color: hotpink;
+  }
+
